completed-login-logout-implementation

--- a/src/styles.css
+++ b/src/styles.css
@@ -314,3 +314,5 @@ img {
 	font-weight: normal;
 }
 /* end of footer */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
