--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,10 +1,12 @@
 <div id="templatemo_menu">
     <ul>
         <li><a href="#" class="current">Home</a></li>
-        <li><a routerLink="" routerLinkActive="active-link">Login</a></li>
-        <li><a href="#">Books</a></li>
+        <li><a routerLink="" routerLinkActive="active-link">Search</a></li>
         <li><a href="#">New Releases</a></li>
-        <li><a href="#">Company</a></li>
-        <li><a href="#">Contact</a></li>
     </ul>
-</div> <!-- end of menu -->
+    <a *ngIf="!isAuthenticated" class="theLogin" routerLink="/login" routerLinkActive="active-link">Login</a>
+    <div *ngIf="isAuthenticated">
+        <button (click)="userLogout()">Logout</button>
+    </div>
+</div>
+<h3 *ngIf="isAuthenticated" class="welcome">Welcome back , {{user}}</h3>
