added-details-page

--- a/src/app/components/books/books.component.html
+++ b/src/app/components/books/books.component.html
@@ -6,7 +6,7 @@
             <p>{{temp.description}}</p>
             <h3>{{ temp.price | currency:'INR' }}</h3>
             <div class="buy_now_button"><a href="#">Buy Now</a></div>
-            <div class="detail_button"><a href="#">Detail</a></div>
+            <div class="detail_button"><a routerLink="/book-details/{{ temp.id }}" routerLinkActive="active-link">Details</a></div>
         </div>
         <div class="cleaner">&nbsp;</div>
     </div>
