fix-cart-visibility

--- a/src/app/components/book-details/book-details.component.html
+++ b/src/app/components/book-details/book-details.component.html
@@ -18,7 +18,7 @@
     <p>In fermentum, eros ac tincidunt aliquam, elit velit semper nunc, a tincidunt orci lectus a arcu. Nullam commodo, arcu non facilisis imperdiet, felis lectus tempus felis, vitae volutpat augue ante quis leo. Aliquam tristique dolor ac odio. Sed consectetur, lacus et dictum tristique, odio neque elementum ante, nec eleifend leo dolor vel tortor.</p>
 
     <div class="left"><button (click)="gotoHomepage()">Back</button></div>
-    <div><button>Buy now</button></div>
+    <div><button (click)=addToCart(newBook)>Buy now</button></div>
     
     <div class="cleaner_with_height">&nbsp;</div>
         
