--- a/src/app/components/cart-list/cart-list.component.html
+++ b/src/app/components/cart-list/cart-list.component.html
@@ -29,7 +29,7 @@
             <td>
                 <p>Total Price : {{totalPrice}}</p><p>Total Quantity : {{totalQuantity}}</p>
                 <div class="checkout">
-                    <button class="check-btn">Checkout</button>
+                    <button (click)="checkoutNow()" class="check-btn">Checkout</button>
                 </div>
             </td>
         </tr>
