--- a/src/app/components/books/books.component.css
+++ b/src/app/components/books/books.component.css
@@ -4,6 +4,7 @@
 	height: 210px;
 	padding: 10px;
 	border: 1px solid #333;
+        margin: 5px 5px;
 }
 
 .product_info {
@@ -74,3 +75,17 @@
 	height: 30px;
 	font-size: 1px;	
 }
+
+.navi {
+	float : right;
+	font-size: 13px;
+	font-weight: bold;
+	color: black;
+	background-color: #2c8ac4;
+	margin: 2px 2px;
+}
+
+.select{
+	background-color: rgb(255, 251, 30);
+}
+
