--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -2,11 +2,11 @@
     text-align: center;
     background-color: teal;
     font-size: 12px;
-    color: white;
     border: 5px white solid;
-    height: 450px;
+    color: black;
+    height: 520px;
     width: 50%;
     margin-left : 20%;
     margin-bottom : 3%;
+    padding: 5px 5px;
 }
-
