--- a/src/app/components/best-seller/best-seller.component.html
+++ b/src/app/components/best-seller/best-seller.component.html
@@ -1,15 +1,15 @@
 <div class="templatemo_content_left_section">
     <h1>Bestsellers</h1>
     <ul>
-        <li><a href="#">Vestibulum ullamcorper</a></li>
-        <li><a href="#">Maece nas metus</a></li>
-        <li><a href="#">In sed risus ac feli</a></li>
-        <li><a href="#">Praesent mattis varius</a></li>
-        <li><a href="#">Maece nas metus</a></li>
-        <li><a href="#">In sed risus ac feli</a></li>
-        <li><a href="#">Flash Templates</a></li>
-        <li><a href="#">CSS Templates</a></li>
-        <li><a href="#">Web Design</a></li>
-        <li><a href="http://www.photovaco.com" target="_parent">Free Photos</a></li>
+        <li>In Search of Lost Time</li>
+        <li>Ulysses</li>
+        <li>One Hundred Years of Solitude</li>
+        <li>The Great Gatsby</li>
+        <li>Moby Dick</li>
+        <li>War and Peace</li>
+        <li>Hamlet</li>
+        <li>The Odyssey</li>
+        <li>Madame Bovary</li>
+        <li>The Divine Comedy</li>
     </ul>
 </div>
