--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,17 +1,17 @@
 <div id="templatemo_header">
     <div id="templatemo_special_offers">
         <p>
-            <span>25%</span> discounts for
-            purchase over $80
+            <span>25%</span> discount for
+            purchase of over {{ 1000 | currency : 'INR'}}
         </p>
     </div>
 
 
     <div id="templatemo_new_books">
         <ul>
-            <li>Suspen disse</li>
-            <li>Maece nas metus</li>
-            <li>In sed risus ac feli</li>
+            <li>Lord of the Rings</li>
+            <li>Pinocchio</li>
+            <li>And Then There Were None</li>
         </ul>
     </div>
 </div> <!-- end of header -->
